Fix more Sonar warnings.